updated version to reflect latest nuget push

--- a/PALM.InterfaceLayouts.Unofficial/PALM.InterfaceLayouts.Unofficial.csproj
+++ b/PALM.InterfaceLayouts.Unofficial/PALM.InterfaceLayouts.Unofficial.csproj
@@ -9,6 +9,8 @@
     <PackageTags>PALM</PackageTags>
     <Title>Unofficial Florida PALM Interface Layouts (Test)</Title>
     <PackageId>$(AssemblyName).Test</PackageId>
+    <Version>$(VersionPrefix)1.0.1</Version>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
