restructured folders to remove redundant folders removed inboundencumbranceload and replaced functionality with extensions that are more straightforward

--- a/PALM.InterfaceLayouts.Unofficial/PALM.InterfaceLayouts.Unofficial.csproj
+++ b/PALM.InterfaceLayouts.Unofficial/PALM.InterfaceLayouts.Unofficial.csproj
@@ -14,7 +14,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\InterfaceLayouts\AccountsPayables\InboundVoucherLoad\" />
+    <Folder Include="Entities\AccountsPayables\InboundVoucherLoad\" />
+    <Folder Include="Services\Utilities\" />
   </ItemGroup>
 
 </Project>
