--- a/PALM.BatchInterfaceTools.Library/PALM.BatchInterfaceTools.Library.csproj
+++ b/PALM.BatchInterfaceTools.Library/PALM.BatchInterfaceTools.Library.csproj
@@ -9,8 +9,10 @@
     <PackageTags>PALM</PackageTags>
     <Title>PALM Batch Interface Tools Library (Unofficial)</Title>
     <PackageId>$(AssemblyName).Unofficial</PackageId>
-    <Version>$(VersionPrefix)1.0.1</Version>
+    <Version>$(VersionPrefix)1.0.2</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/markrissinger/PALM.BatchInterfaceTools.Library.Unofficial</RepositoryUrl>
+    <PackageReleaseNotes>included commitment control (KK) inbound budget journal upload (KKI001)</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
